--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 node_modules
+.idea/jswechat.iml
+.idea/markdown-navigator.xml
+.idea/markdown-navigator/
+.idea/misc.xml
+.idea/modules.xml
+.idea/watcherTasks.xml
+.idea/workspace.xml
